2014-01-31  Glenn Morris  <rgm@gnu.org>

	* erc.el (erc-accidental-paste-threshold-seconds): Doc tweak.

2014-01-25  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* erc.el (erc): Link to info manual.

2013-12-28  Glenn Morris  <rgm@gnu.org>

	* erc-log.el (erc-log-file-coding-system): Specify custom type.

2013-11-25  Glenn Morris  <rgm@gnu.org>

	* erc-button.el (erc-nick-popup): Make `nick' available in the
	eval environment.  (Bug#15969)

2013-11-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc-pcomplete.el (erc-pcomplete): Set this-command.

2013-09-21  Glenn Morris  <rgm@gnu.org>

	* erc.el (erc-invite-only-mode, erc-toggle-channel-mode):
	Remove unused local variable `erc-force-send'.

2013-09-19  Glenn Morris  <rgm@gnu.org>

	* erc-button.el (erc-button-click-button, erc-button-press-button):
	* erc-list.el (erc-list-handle-322):
	Mark unused arguments.

	* erc.el (erc-open-server-buffer-p): Actually use the `buffer' arg.
	* erc-backend.el (erc-server-process-alive): Take optional `buffer' arg.

2013-09-18  Glenn Morris  <rgm@gnu.org>

	* erc-button.el (erc-button-add-buttons): Remove unused local vars.

2013-09-14  Vivek Dasmohapatra  <vivek@etla.org>

	* erc.el (erc-update-mode-line-buffer):
	Handle absent topic.  (Bug#15377)

2013-09-13  Glenn Morris  <rgm@gnu.org>

	* erc-desktop-notifications.el (dbus-debug): Declare.

2013-08-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc.el: Use lexical-binding.
	(erc-user-full-name): Minor CSE simplification.
	(erc-mode-map): Assume command-remapping is available.
	(erc-once-with-server-event): Replace `forms' arg with a function arg.
	(erc-once-with-server-event-global): Remove.
	(erc-ison-p): Adjust to change in erc-once-with-server-event.
	(erc-get-buffer-create): Remove arg `proc'.
	(iswitchb-make-buflist-hook): Declare.
	(erc-setup-buffer): Use pcase; avoid ((lambda ..) ..).
	(read-passwd): Assume it exists.
	(erc-display-line, erc-cmd-IDLE): Avoid add-to-list, adjust to change